# GazeGenie

./: .gitignore  Dockerfile  README.md  analysis_funcs.py  app.py  classic_correction_algos.py  create_interest_areas_from_image.py  docker-compose.yaml  eyekit_measures.py  multi_proc_funcs.py  popEye_funcs.py  process_asc_files_in_multi_p.py  pyproject.toml  requirements.txt  utils.py
.devcontainer/: devcontainer.json
