[project]
name = "gazegenie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "eyekit>=0.7.0",
    "icecream>=2.1.5",
    "jellyfish>=1.2.0",
    "lovely-tensors>=0.1.18",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pycairo>=1.28.0",
    "pydantic==1.10",
    "pytesseract>=0.3.13",
    "pytorch-lightning>=2.5.2",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "stqdm>=0.0.5",
    "streamlit>=1.35",
    "tensorboard>=2.19.0",
    "timm>=1.0.16",
    "torch==2.*",
    "torchmetrics>=1.7.3",
    "tqdm>=4.67.1",
    "transformers==4.*",
]
